# Converters

./: Platform.Converters.csproj  Platform.Converters.sln  README.html  README.md  To.cs  To[T].cs  index.html  index.json  manifest.json  toc.html  xrefmap.yml
Platform.Converters/: CachingConverterDecorator.cs  CheckedConverter.cs  Converter.cs  ConverterBase.cs  To.cs  To[T].cs  (+4 more)
Platform.Converters.Benchmarks/: Int32ToUInt64ConverterBenchmarks.cs  Platform.Converters.Benchmarks.csproj  UInt64ToUInt64ConverterBenchmarks.cs
Platform.Converters.Tests/: ConverterTests.cs  Platform.Converters.Tests.csproj
cpp/: CMakeLists.txt
cpp/Platform.Converters/: CachingConverterDecorator.h  CheckedConverter.h  Convert.h  ConvertTo.h  Converter.h  ConverterBase.h  IConverter[TSource, TTarget].h  IConverter[T].h  Platform.Converters.TemplateLibrary.nuspec  Platform.Converters.TemplateLibrary.vcxproj  Platform.Converters.TemplateLibrary.vcxproj.filters  Platform.Converters.h  StringConverter.h  To.h  UncheckedConverter.h  UncheckedSignExtendingConverter.h  is_detected.h
cpp/Platform.Converters.Benchmarks/: Int32ToUInt64ConverterBenchmarks.cpp  Program.cpp  UInt64ToUInt64ConverterBenchmarks.cpp
cpp/Platform.Converters.Tests/: ConverterTests.cpp  Platform.Converters.TemplateLibrary.Tests.cpp  Platform.Converters.TemplateLibrary.Tests.vcxproj  Platform.Converters.TemplateLibrary.Tests.vcxproj.filters  Platform.Converters.Tests.cpp
cpp/Platform.Converters/NuGetPackageSource/: Platform.Converters.TemplateLibrary.0.0.1.nuspec  Platform.Converters.TemplateLibrary.0.0.2.nuspec
(+45 files in other folders)
